fixed input height and added white-space nowrap

--- a/css/main.css
+++ b/css/main.css
@@ -74,28 +74,23 @@ body {
 }
 
 .search-text {
-    display: block;
-    position: relative;
-    transform: translateX(-17%);
-
+    transform: translateX(-29%);
+    white-space: nowrap;
+    font-size: 1.3rem;
 }
 
 #input-text {
-    height: 3rem;
+    height: 2.6rem;
     width: 130%;
     border-radius: 5px;
     border: none;
 }
 
 #input-submit {
-    position: relative;
-    top: .6rem;
-    left: 2.5rem;
     text-decoration: none;
     color: #fff;
     background-color:#81D398;
-    padding: 1rem;
-    display: inline-block;
+    padding: .6rem;
     border-radius: 5px;
 }
 
